--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/seraoglow/seraoglowww.git"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "sappom": "^1.0.1"
+    "sappom": "^1.0.1",
+    "seraogloww": "^1.0.2"
   }
 }
