--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "seraoglowww",
-  "version": "1.0.1",
+  "name": "seraoglowwwo",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
