--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "sappom": "^1.0.1",
-    "seraogloww": "^1.0.2"
+    "seraogloww": "^1.0.2",
+    "seraoglowwo": "^1.0.2"
   }
 }
